WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83089
Fix types for location, size and rect calculations for render objects
https://bugs.webkit.org/show_bug.cgi?id=83089
Summary
Fix types for location, size and rect calculations for render objects
Emil A Eklund
Reported
2012-04-03 16:10:23 PDT
Misc fixes for render objects.
Attachments
Patch
(14.14 KB, patch)
2012-04-03 16:14 PDT
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Emil A Eklund
Comment 1
2012-04-03 16:14:13 PDT
Created
attachment 135446
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-04-03 19:09:56 PDT
Comment on
attachment 135446
[details]
Patch OK.
Emil A Eklund
Comment 3
2012-04-03 20:54:30 PDT
Thanks Eric!
WebKit Review Bot
Comment 4
2012-04-04 12:04:34 PDT
Comment on
attachment 135446
[details]
Patch Clearing flags on attachment: 135446 Committed
r113222
: <
http://trac.webkit.org/changeset/113222
>
WebKit Review Bot
Comment 5
2012-04-04 12:04:38 PDT
All reviewed patches have been landed. Closing bug.
Levi Weintraub
Comment 6
2012-04-05 04:57:25 PDT
***
Bug 83157
has been marked as a duplicate of this bug. ***
Levi Weintraub
Comment 7
2012-04-05 06:33:20 PDT
***
Bug 83169
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug