Source/WebCore/rendering/RenderDetailsMarker.h
@@ -42,7 +42,7 @@ private:
 
     bool isOpen() const;
     Path getCanonicalPath() const;
-    Path getPath(const IntPoint& origin) const;
+    Path getPath(const LayoutPoint& origin) const;
 };
 
 inline RenderDetailsMarker* toRenderDetailsMarker(RenderObject* object)
